5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1594_2426.log
== TEST (2019-04-04 13:14:42) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))

vm= d/t
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vm= d/t
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:14:59) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))

vm= d/t
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vm= d/t
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:15:23) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))

vm= d/t
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vm= d/t
NameError: name 'd' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:16:30) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))

d= vm*t
print(d)
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:17:32) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))

d= vm*t
print(round(d,3))
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:18:23) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))

d= vm*t
print(round(d,2))
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:18:45) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))

d= vm*t
print(round(d,3))
-- OUTPUT:
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:37:03) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
print(round(D,3))

CM= 12
 
CG= CM*D
print(round(CG,3))
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:39:51) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
print(round(D,3))

CM= 12
 
CG= CM*D
print(round(CG,3))
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:41:13) 
-- CODE:
t= int(input("tempo gasto em uma viagem de carro:"))
vm= int(input("velocidade media do carro:"))


D= vm*t
print(round(D,3))

CM= 12
 
CG= CM*D
print(round(CG,1))
-- OUTPUT:
900
10800
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 13:41:29) 
-- CODE:
t= int(input("tempo gasto em uma viagem de carro:"))
vm= int(input("velocidade media do carro:"))


D= vm*t
print(round(D,3))

CM= 12
 
CG= CM*D
print(round(CG,1))
-- OUTPUT:
900
10800
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:05:48) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= flo(input("velocidade media do carro:"))


D= vm*t
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vm= flo(input())
NameError: name 'flo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:06:09) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:06:35) 
-- CODE:
t= int(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:06:41) 
-- CODE:
t= int(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:06:52) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:07:27) 
-- CODE:
t= (input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    D= vm*t
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:07:48) 
-- CODE:
t= (input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    D= vm*t
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:08:11) 
-- CODE:
t= (input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*float(t)
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 16:09:10) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*(t)
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:38:28) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*((t)/60)
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
15.0
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 12:38:38) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*((t)/60)
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
15.0
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 12:39:04) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*((t)/60)
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- EXECUTION TIME:
0.164839
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
15.0
180.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
10.0
120.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
1.6
19.200000000000003
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:51:25) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*((t)/60)
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
15.0
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:52:39) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*((t)/60)
print(D)

CM= 12
 
CG= CM/D
print(CG)
-- OUTPUT:
15.0
0.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 19:53:03) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*((t)/60)
print(D)

CM= 12
 
CG= CM/D
print(CG)
-- OUTPUT:
15.0
0.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 10:48:40) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))

tt= t/60

D= vm*tt
print(D)

CM= 12
 
CG= CM/D
print(CG)
-- OUTPUT:
15.0
0.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 10:49:19) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))

tt= t/60

D= vm*tt
print(D)

CM= 12
 
CG= CM/D
print(CG)
-- OUTPUT:
15.0
0.8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 10:50:13) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))*60
vm= float(input("velocidade media do carro:"))

tt= t/60

D= vm*tt
print(D)

CM= 12
 
CG= CM/D
print(CG)
-- OUTPUT:
900.0
0.013333333333333334
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 10:51:27) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))*60
vm= float(input("velocidade media do carro:"))

tt= t/60

D= vm*tt
print(D)

CM= 12
 
CG= CM*D
print(CG)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 10:55:32) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))*60
vm= float(input("velocidade media do carro:"))

tt= t/60

D= vm*tt
print(D)

CM= 12
 
CG= CM*D/60
print(CG)
-- OUTPUT:
900.0
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 10:56:23) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))*60
vm= float(input("velocidade media do carro:"))

tt= t/60

D= vm*tt
print(D)

CM= 12
 
CG= (CM*D)/60
print(CG)
-- OUTPUT:
900.0
180.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-18 10:56:50) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))*60
vm= float(input("velocidade media do carro:"))

tt= t/60

D= vm*tt
print(D)

CM= 12
 
CG= (CM*D)/12
print(CG)
-- OUTPUT:
900.0
900.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:20:03) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*tt
CG = D/12
print(D)

print(CG)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    D= vm*tt
NameError: name 'tt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:20:08) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*tt
CG = D/12
print(D)

print(CG)
-- EXECUTION TIME:
0.671194
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1594/2426/main.py", line 5, in <module>
    D= vm*tt
NameError: name 'tt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-01 13:20:18) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
CG = D/12
print(D)

print(CG)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-01 13:20:21) 
-- CODE:
t= float(input("tempo gasto em uma viagem de carro:"))
vm= float(input("velocidade media do carro:"))


D= vm*t
CG = D/12
print(D)

print(CG)
-- EXECUTION TIME:
0.771231
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
